# virtual_qa_automation_engineer

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval_config.yml  workflow.yaml
data/: eval_dataset.json
src/navigator/: register.py
