[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "navigator"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]~=1.1",
  "httpx>=0.24",
  "pydantic>=2.0",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "arize-phoenix"
]
requires-python = ">=3.11,<3.13"
description = "Simple Navigator Agent example"
keywords = ["ai", "qa", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
navigator = "navigator.register"